# goscpp

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: goscpp.cmake
include/gos/: color.h  interpolate.h  nearest.h  noise.h  range.h  scale.h  screen.h  text.h  time.h  types.h  version.h.in
src/: CMakeLists.txt  color.cpp  text.cpp
tests/: CMakeLists.txt  color.cpp  interpolate.cpp  nearest.cpp  noise.cpp  range.cpp  scale.cpp  screen.cpp  text.cpp  time.cpp
